--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Planka is an open source project management software"
+      content="Planujte s Virtualnakancelaria.online"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Planuj Online</title>
+    <title>Planovanie s Virtualnakancelaria.online</title>
   </head>
   <script>window.BASE_URL = "%PUBLIC_URL%";</script>
   <body id="app">
